prevent title overflow (web)

--- a/klassic-note-web/index.css
+++ b/klassic-note-web/index.css
@@ -21,6 +21,12 @@ body {
 	margin: 0;
 }
 
+#title {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
 #overlay {
 	text-align: center;
     position: absolute;
